--- a/career.html
+++ b/career.html
@@ -43,6 +43,12 @@
 </head>
 <body class="min-h-screen text-gray-200 p-6 md:p-12">
     <div class="container mx-auto max-w-5xl">
+        <nav class="mb-8">
+            <a href="index.html" class="inline-flex items-center gap-2 bg-gray-900 bg-opacity-50 hover:bg-opacity-70 text-purple-300 font-semibold py-2 px-4 rounded-full transition">
+                <span>&larr;</span>
+                <span>Quay lại Trang Chủ</span>
+            </a>
+        </nav>
         
         <!-- Tiêu đề -->
         <header class="text-center mb-10">
